<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidTicTacToe</string>
    <string name="action_new_game">Jugar de nuevo!!!</string>
    <string name="ai_difficulty">Dificultad</string>
    <string name="preferences">Preferencias</string>
    <string name="board_color">Color del Tablero</string>
    <string name="sound">Sonido</string>
    <string name="sound_setting">Encender o apagar el sonido</string>
    <string name="victory_msg">Mensaje de victoria</string>
    <string name="color_summary">Seleccione el color del tablero</string>
    <string name="reset_score">Reiniciar puntaje</string>
    <string name="exit">Salir</string>
    
	<string name="first_human">Tu primero.</string>
	<string name="turn_human">Tu turno.</string>
	<string name="turn_computer">Turno de Android.</string>
	<string name="score_label_human">Tú:</string>
    <string name="score_label_computer">Android:</string>
    <string name="score_label_tie">Empates:</string>
	<string name="result_tie">Empate.</string>
	<string name="result_human_wins">Ganaste!</string>
	<string name="result_computer_wins">Perdiste!</string>
	<string name="difficulty_choose">Dificultad preferida:</string>
	<string name="difficulty_easy">Fácil</string>
	<string name="difficulty_harder">Medio</string>
	<string name="difficulty_expert">Dificil</string>
	<string name="quit_question">Desea Salir?</string>
	<string name="yes">Si</string>
	<string name="no">No</string>
	
	<string name="description">Aplicación desarrollada para los retos de la semana. Aplicaciones móviles UNAL.</string>
	<string name="about">Acerca de TicTacToe.</string>

</resources>